styling: Fix unintentional line wrapping

--- a/docs/style.css
+++ b/docs/style.css
@@ -127,7 +127,8 @@ form {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  align-items: center; }
+  align-items: center;
+  gap: 0; }
   form .left, form .right {
     min-width: 0; }
   form .row {
@@ -136,12 +137,12 @@ form {
     align-items: center; }
   form input[type=text] {
     line-height: 2em;
-    margin-right: 3em;
-    width: 30em;
+    margin-right: 2em;
+    width: 26em;
     min-width: 0; }
   form input[type=number] {
-    width: 5em;
-    margin-left: 1em; }
+    width: 3.5em;
+    margin-left: 0.5em; }
   form > button {
     border: 0;
     text-decoration: none;
